syntax = "proto3";

package rivet.backend.pkg.faker.game_namespace;

import "proto/common.proto";

message Request {
	rivet.common.Uuid game_id = 1;
	rivet.common.Uuid version_id = 2;
	string override_display_name = 3;
	string override_name_id = 4;
}

message Response {
	rivet.common.Uuid namespace_id = 1;
}
